[package]
name = "peano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "peano"

[dependencies]
egg = "0.7.1"
pest = "2.0"
pest_derive = "2.0"
rustyline = "9.1.0"
tempfile = "3.0.3"
smallset = "0.1.1"
colored = "2.0.0"
