[tool.poetry]
name = "peano"
version = "0.1.0"
description = "An environment for learning formal mathematical reasoning from exploration"
authors = ["Gabriel Poesia <me@gpoesia.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
hydra-core = "^1.2.0"
wandb = "^0.12.14"
bottle = "^0.12.23"
numpy = "^1.23.4"
altair = "^4.2.0"
tqdm = "^4.64.1"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
